добавляет шапку и подвал

--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -15,7 +15,7 @@ block content
 				h1.heading Страницы проекта
 
 				ul.list
-					each item in PAGES_LIST
+					each item in MAIN_MENU
 						li.list__item
 							a.list__link(href= item.url)= item.name
 
