--- a/source/pug/templates/main.pug
+++ b/source/pug/templates/main.pug
@@ -20,7 +20,7 @@ html.no-js(lang="en", class= htmlModClass)
 		meta(name='theme-color' content='#ffffff')
 
 		// CSS
-		link(rel="stylesheet", href="css/bootstrap-grid.css")
+		link(rel="stylesheet", href="css/bootstrap-grid.min.css")
 		link(rel="stylesheet", href="css/main.css")
 
 		if isIntro
