--- a/source/pug/mixins/_navigation-dropdown.pug
+++ b/source/pug/mixins/_navigation-dropdown.pug
@@ -1,14 +1,14 @@
-mixin navigation-dropdown(object)
-	- let array = isDark ? object.dark : object.white;
-		.navigation__dropdown
-			.navigation__dropdown-wrapper
-				.navigation__dropdown-column
-					//-.navigation__dropdown-column-title Light
-					ul.navigation__dropdown-list
-						each item in array
-							if item.currentPage === currentPage
-								li.navigation__dropdown-item.navigation__dropdown-item--current
-									a= item.text
-							else
-								li.navigation__dropdown-item
-									a.animsition-link(href= item.url)= item.text
+mixin navigation-dropdown(obj)
+	.navigation__dropdown
+		ul.navigation__dropdown-list
+			each item in obj
+				if item.currentPage === currentPage
+					li.navigation__dropdown-item.navigation__dropdown-item--current
+						a= item.name
+							span.navigation__dropdown-icon
+								+icon('link-arrow')(width="12", height="13")
+				else
+					li.navigation__dropdown-item
+						a.animsition-link(href= item.url)= item.name
+							span.navigation__dropdown-icon
+								+icon('link-arrow')(width="12", height="13")
