--- a/source/pug/templates/_bottom_js.pug
+++ b/source/pug/templates/_bottom_js.pug
@@ -1,6 +1,6 @@
 // Javascript libs
 script(src="js/libs/jquery-3.5.1.min.js")
-script(src="js/libs/animsition.js")
+script(src="js/libs/animsition.min.js")
 script(src="js/libs/aos.js")
 script(src="js/libs/swiper-bundle.min.js")
 
