--- a/source/scss/blocks/field.scss
+++ b/source/scss/blocks/field.scss
@@ -10,22 +10,24 @@
 	textarea {
 		display: block;
 		width: 100%;
-		padding: 15px 16px;
+		padding: 16px 0 14px;
 		//border: solid 1px $color-grey7;
 		font-family: $font-family--main;
 
 		@include text(16px, 1);
-
-		&::placeholder {
-			@include text(16px, 1);
-			opacity: 1;
-		}
+		border: none;
+		border-bottom: solid 1px $color-default-black;
+		background-color: transparent;
 
 		@include transition(border-color);
 
 		&:focus {
 			outline: none;
 			border-color: $color-default-black;
+			color: $color-default-black;
+		}
+
+		&:hover + #{$self}__hint {
 			color: $color-default-black;
 		}
 
@@ -41,6 +43,26 @@
 
 		@include media(xl) {
 			height: 174px;
+		}
+	}
+
+	&__hint {
+		position: absolute;
+		top: 50%;
+		left: 0;
+		transform: translateY(-50%);
+
+		@include text(15px, 1, rgba($color-default-black, 0.5));
+		text-transform: uppercase;
+
+		transition: 0.2s ease;
+	}
+
+	&--filled {
+		#{$self}__hint {
+			font-size: 12px;
+			color: $color-default-black;
+			transform: translateY(-24px);
 		}
 	}
 }
