--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -45,7 +45,7 @@
 
 /* 1.1 General */
 @import "common/global";
-@import "common/components";
+//@import "common/components";
 
 /* 1.2  Typography */
 @import "common/fonts";
@@ -56,6 +56,7 @@
 
 /* 1.4 Buttons */
 @import "blocks/btn";
+@import "blocks/arrow-btn";
 
 /* 1.5 Fields */
 @import "blocks/field";
@@ -74,6 +75,9 @@
 
 /* 1.10 Social */
 @import "blocks/social";
+
+/* Mobile canvas */
+@import "blocks/mobile-canvas";
 
 /* 2.2 Header */
 @import "blocks/header";
