agency-default правки

--- a/source/pug/agency-default.pug
+++ b/source/pug/agency-default.pug
@@ -9,6 +9,11 @@ block header
 	include modules/header-secondary
 
 block content
+	include modules/hero
+	include modules/features
+	include modules/our-services
+	include modules/works
+	include modules/contact-section
 
 
 block footer
