--- a/source/scss/common/utils.scss
+++ b/source/scss/common/utils.scss
@@ -57,6 +57,12 @@
 	color: $color-yellow;
 }
 
+.text-md-right {
+	@include media(md) {
+		text-align: right;
+	}
+}
+
 /* swiper */
 
 .swiper-pagination {
