--- a/source/pug/mixins/mixins.pug
+++ b/source/pug/mixins/mixins.pug
@@ -14,3 +14,7 @@ include _menu-dropdown.pug
 include _menu-dropdown-home.pug
 include _intro-card.pug
 include _latest-news-card.pug
+
+
+include _arrow-link.pug
+include _btn.pug
