--- a/source/pug/modules/header-secondary.pug
+++ b/source/pug/modules/header-secondary.pug
@@ -1,4 +1,4 @@
-header.header
+header.header.header--absolute
 	.header__container.container-fluid
 		a.header__logo.logo
 			+icon('logo')(width="76" height="19")
