--- a/source/scss/blocks/btn.scss
+++ b/source/scss/blocks/btn.scss
@@ -1,23 +1,34 @@
 .btn {
 	//old
-	display: inline-block;
-	vertical-align: top;
-	padding: 17px 20px;
+	min-width: 207px;
+	display: inline-flex;
+	align-items: center;
+	padding: 16px 20px 15px 25px;
 
-	@include text(16px, 1, $color-default-black);
-	text-transform: uppercase;
-	text-align: center;
-	font-weight: 500;
-
-	border: solid 1px $color-yellow;
+	border: none;
 	background-color: $color-yellow;
 
 	cursor: pointer;
 
 	@include transition(background-color);
 
+	&__text {
+		@include text(15px, 18 / 15, $color-default-black);
+		text-transform: uppercase;
+		font-weight: 500;
+	}
+
+	&__icon {
+		margin-left: auto;
+
+		svg {
+			display: block;
+			fill: $color-default-black;
+		}
+	}
+
 	@include media(md) {
-		padding: 17px 44px;
+		//padding: 17px 44px;
 	}
 
 	&:hover,
