--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -142,6 +142,7 @@
 		margin-bottom: 36px;
 
 		@include media(sm) {
+			margin-bottom: 0;
 			transform: rotate(-90deg) translateX(-100%);
 			transform-origin: 0 0;
 		}
