--- a/source/pug/single-post.pug
+++ b/source/pug/single-post.pug
@@ -132,7 +132,7 @@ block content
 							input(type='file', name='file')
 							+icon('clip')
 							span Attach a file
-						+btn(true, 'Submit')
+						+btn(true, 'Submit', '', 'btn--black')
 
 
 
