--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -1,11 +1,23 @@
 .form {
-	padding: 45px 60px 92px;
+	padding: 40px 25px 55px;
 	background-color: $color-yellow;
 
+	@include media(lg) {
+		padding: 45px 60px 92px;
+	}
+
 	&__title {
-		font-size: 32px;
-		line-height: 42px;
-		margin-bottom: 70px;
+		font-size: 26px;
+		line-height: 32px;
+		text-align: center;
+		margin-bottom: 45px;
+
+		@include media(md) {
+			font-size: 32px;
+			line-height: 42px;
+			text-align: left;
+			margin-bottom: 70px;
+		}
 	}
 
 	label {
@@ -15,31 +27,62 @@
 	&__row {
 		display: flex;
 		flex-wrap: wrap;
-		margin: 0 -50px;
+
+		@include media(md) {
+			margin: 0 -15px;
+		}
+
+		@include media(lg) {
+			margin: 0 -50px;
+		}
 
 		label {
-			width: calc(50% - 100px);
-			margin: 0 50px 69px;
+			width: 100%;
+			margin: 0 0 40px;
+
+			@include media(md) {
+				width: calc(50% - 30px);
+				margin: 0 15px 69px;
+			}
+
+			@include media(lg) {
+				width: calc(50% - 100px);
+				margin: 0 50px 69px;
+			}
 		}
 	}
 
 	.field-file {
 		display: flex;
 		align-items: center;
+		cursor: pointer;
+
+		@include hover {
+			svg {
+				fill: rgba($color-default-black, 0.85);
+			}
+
+			span {
+				color: rgba($color-default-black, 0.85);
+			}
+		}
 
 		input {
 			display: none;
 		}
 
 		svg {
+			fill: $color-default-black;
 			width: 16px;
 			height: 16px;
 			margin-right: 20px;
+			@include transition(fill);
 		}
 
 		span {
 			font-size: 15px;
 			text-transform: uppercase;
+			@include transition(color);
 		}
 	}
 }
