--- a/source/pug/blog-masonry.pug
+++ b/source/pug/blog-masonry.pug
@@ -1,6 +1,6 @@
 extends templates/main
 block variables
-	- let pageTitle = TITLE_PART + ' | Blog Grid';
+	- let pageTitle = TITLE_PART + ' | Blog Masonry';
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 4.01; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 4; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
