--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -106,3 +106,5 @@
 @import "blocks/filter";
 @import "blocks/single-post";
 @import "blocks/form";
+@import "blocks/timer";
+@import "blocks/coming-soon";
