--- a/source/scss/blocks/coming-soon.scss
+++ b/source/scss/blocks/coming-soon.scss
@@ -1,73 +1,67 @@
 .coming-soon {
 	width: 100%;
-	background-image: url("../img/picture/bg-launch.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
+	margin-bottom: -1px;
 
-	@include retina {
-		background-image: url("../img/picture/bg-launch@2x.jpg");
-	}
-
-	&::before {
+	&::before,
+	&::after {
 		content: '';
+		width: 100%;
+		height: calc(100% + 1px);
 		position: absolute;
 		top: 0;
 		left: 0;
-		right: 0;
-		bottom: 0;
-		background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+	}
+
+	&::before {
+		filter: grayscale(1);
+		background-image: url("../img/coming-soon.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+
+		@include retina {
+			background-image: url("../img/coming-soon@2x.jpg");
+		}
+	}
+
+	&::after {
+		background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+	}
+
+	&__header {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100px;
+		padding-top: 30px;
+		position: relative;
+		top: 0;
+		left: 0;
+		z-index: 2;
+
+		/*@media (orientation: landscape) {
+			position: relative;
+		}*/
+
+		svg {
+			fill: $color-default-white;
+		}
 	}
 
 	&__container {
-		max-width: 730px;
+		max-width: 750px;
 		position: relative;
 		margin: 0 auto;
+		z-index: 2;
 	}
 
 	&__wrapper {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		min-height: 100vh;
-		padding: 30px 10px 60px;
+		min-height: calc(100vh - 100px);
+		padding-bottom: 100px;
 		color: $color-default-white;
-
-		@media (min-height: 550px) {
-			padding: 30px 10px 10px;
-		}
-
-		@include media(md) {
-			padding-top: 50px;
-		}
-
-		@include media(lg) {
-			padding: 83px 0 10px;
-		}
-	}
-
-	&__logo {
-		padding-bottom: 17px;
-		margin-bottom: 20px;
-
-		@media (min-height: 800px) {
-			margin-bottom: 0;
-		}
-
-		.logo {
-			&__large,
-			&__small {
-				text-align: left;
-			}
-
-			&__large {
-				@include text(38px, 44px, $color-default-white);
-			}
-
-			&__small {
-				@include text(11px, 13px, $color-default-white);
-			}
-		}
 	}
 
 	&__content {
@@ -79,10 +73,9 @@
 	}
 
 	&__title {
-		font-family: $font-family--secondary;
 		font-size: 36px;
 		line-height: 46px;
-		font-weight: bold;
+		color: rgba($color-yellow, 0.95);
 		text-align: center;
 		margin-bottom: 20px;
 
@@ -93,23 +86,23 @@
 		}
 
 		@include media(lg) {
-			font-size: 60px;
-			line-height: 75px;
-			margin-bottom: 46px;
+			font-size: 100px;
+			line-height: 95%;
+			margin-bottom: 81px;
 		}
 	}
 
 	&__subtitle {
 		margin-bottom: 40px;
 		font-size: 14px;
-		line-height: 24px;
+		line-height: 18px;
 		text-align: center;
 
 		@include media(lg) {
-			max-width: 650px;
-			margin-bottom: 96px;
-			font-size: 16px;
-			line-height: 26px;
+			max-width: 430px;
+			margin-bottom: 88px;
+			font-size: 15px;
+			line-height: 21px;
 		}
 	}
 
@@ -122,9 +115,7 @@
 		margin-bottom: 30px;
 
 		@include media(lg) {
-			font-size: 24px;
-			line-height: 24px;
-			margin-bottom: 76px;
+			margin-bottom: 40px;
 		}
 	}
 
@@ -136,7 +127,22 @@
 		}
 
 		@include media(lg) {
-			margin-top: 100px;
+			margin-top: 120px;
+		}
+
+		.social__link {
+			width: 22px;
+			height: 22px;
+
+			@include hover {
+				svg {
+					fill: $color-yellow;
+				}
+			}
+
+			svg {
+				fill: $color-default-white;
+			}
 		}
 	}
 }
