--- a/source/scss/utils/variables.scss
+++ b/source/scss/utils/variables.scss
@@ -29,10 +29,12 @@ $color-base: $color-default-black; // основной цвет текста, и
 //
 $fonts: "Neue Montreal" "NeueMontreal-Regular" 400 normal,
 	"Neue Montreal" "NeueMontreal-Medium" 500 normal,
-	"Neue Montreal" "NeueMontreal-Italic" 400 italic;
+	"Neue Montreal" "NeueMontreal-Italic" 400 italic,
+	"Gilroy" "Gilroy-Regular" 400 normal,
+	"Gilroy" "Gilroy-Bold" 700 normal;
 
 $font-family--main: "Neue Montreal", "Arial", sans-serif;
-//$font-family--secondary: "Gilroy", "Arial", sans-serif;
+$font-family--secondary: "Gilroy", "Arial", sans-serif;
 //$font-family--third: "Swansea", "Arial", sans-serif;
 
 $font-size-base: 15px;
