--- a/source/pug/templates/_bottom_js.pug
+++ b/source/pug/templates/_bottom_js.pug
@@ -6,6 +6,7 @@ script(src="js/libs/swiper-bundle.min.js")
 script(src="js/libs/isotope.pkgd.min.js")
 script(src="js/libs/packery.pkgd.min.js")
 script(src="js/libs/packery-mode.pkgd.min.js")
+script(src='js/libs/jquery.pagepiling.js')
 
 if isIntro
 	//-script(src="js/jquery.marquee.min.js")
