--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -108,3 +108,5 @@
 @import "blocks/form";
 @import "blocks/timer";
 @import "blocks/coming-soon";
+@import "blocks/404-error";
+@import "blocks/parallax-projects";
