vcard + боковая шапка

--- a/source/pug/modules/header-secondary.pug
+++ b/source/pug/modules/header-secondary.pug
@@ -7,4 +7,5 @@ header.header.header--secondary.header--absolute
 				include menu
 			a.mobile-canvas__phone(href="tel:+34255216021") + 3 (425) 521 60 21
 		button.header__menu-toggle.menu-toggle(type="button")
+			span.menu-toggle__line
 			span.visually-hidden Menu toggle
