--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -152,3 +152,10 @@
 		{name: 'Bobby Fish', post: 'Designer', image: {url: '3', w: '474', h: '450'}},
 		{name: 'Amanda James', post: 'Programmer', image: {url: '4', w: '326', h: '548'}}
 	];
+
+	let SKILLS = [
+		{text: 'Photoshop', percent: '80'},
+		{text: 'WordPress', percent: '90'},
+		{text: 'Figma', percent: '70'},
+		{text: 'Illustrator', percent: '75'}
+	];
