--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -94,6 +94,12 @@
 /* Team member card */
 @import "blocks/member-card";
 
+/* Skill */
+@import "blocks/skill";
+
+/* Skills block */
+@import "blocks/skills";
+
 /* Carousel */
 @import "blocks/carousel";
 
@@ -153,6 +159,9 @@
 
 /* Feedback section for starting the project */
 @import "blocks/start-project";
+
+/* Vcard page  */
+@import "blocks/vcard";
 
 /* 2.2 Header */
 @import "blocks/header";
