--- a/source/pug/modules/header.pug
+++ b/source/pug/modules/header.pug
@@ -1,17 +1,42 @@
-header.header(class= headerClasses ? headerClasses : '')
-	.header__container.container-fluid
-		if isHome
-			a.header__logo.logo
-				+icon('logo')(width="76" height="19")
-		else
-			a.header__logo.logo(href= URLS.home.default)
-				+icon('logo')(width="76" height="19")
-		.header__mobile.mobile-canvas
-			nav.mobile-canvas__nav.navigation(class= navigationModClass ? navigationModClass : '')
-				include menu
+if isLeftwardHeader
+	header.header.header--leftward(class= headerClasses ? headerClasses : '')
+		.header__container.container-fluid
+			if isHome
+				a.header__logo.logo
+					+icon('logo')(width="76" height="19")
+			else
+				a.header__logo.logo(href= URLS.home.default)
+					+icon('logo')(width="76" height="19")
+			.header__mobile.mobile-canvas
+				button.mobile-canvas__close(type="button")
+					span.visually-hidden Close menu
+				nav.mobile-canvas__nav.navigation(class= navigationModClass ? navigationModClass : '')
+					include menu
+				+social('header__social' + (socialModClass ? ' ' + socialModClass : ''), ['linkedin', 'facebook', 'instagram', 'twitter'])
+
+
 			+social('header__social' + (socialModClass ? ' ' + socialModClass : ''), ['linkedin', 'facebook', 'instagram', 'twitter'])
-		button.header__menu-toggle.menu-toggle(type="button")
-			span.visually-hidden Menu toggle
+
+			button.header__menu-toggle.menu-toggle(type="button")
+				span.menu-toggle__line
+				span.visually-hidden Menu toggle
+
+else
+	header.header(class= headerClasses ? headerClasses : '')
+		.header__container.container-fluid
+			if isHome
+				a.header__logo.logo
+					+icon('logo')(width="76" height="19")
+			else
+				a.header__logo.logo(href= URLS.home.default)
+					+icon('logo')(width="76" height="19")
+			.header__mobile.mobile-canvas
+				nav.mobile-canvas__nav.navigation(class= navigationModClass ? navigationModClass : '')
+					include menu
+				+social('header__social' + (socialModClass ? ' ' + socialModClass : ''), ['linkedin', 'facebook', 'instagram', 'twitter'])
+			button.header__menu-toggle.menu-toggle(type="button")
+				span.menu-toggle__line
+				span.visually-hidden Menu toggle
 
 
 
