--- a/source/scss/blocks/file-upload.scss
+++ b/source/scss/blocks/file-upload.scss
@@ -4,6 +4,18 @@
 	vertical-align: top;
 	min-width: 137px;
 
+	&--theme-yellow {
+		#{$self}__text {
+			color: $color-yellow;
+		}
+
+		#{$self}__icon {
+			svg {
+				fill: $color-yellow;
+			}
+		}
+	}
+
 	&__label {
 		display: flex;
 		align-items: center;
